DEVELOPER-4487 Fixed search btns on mobile

--- a/stylesheets/_searchapp.scss
+++ b/stylesheets/_searchapp.scss
@@ -382,7 +382,7 @@ rhdp-search-filters {
                 border: 1px solid $blue;
                 line-height: 1.44;
                 background-color: $white;
-                padding: 8px 35px;
+                padding: 8px 20px;
                 color:$blue;
                 text-transform: uppercase;
                 margin-right: 1em;
@@ -396,7 +396,7 @@ rhdp-search-filters {
                 text-transform: uppercase;
                 background: $red;
                 font-weight: 600;
-                padding: 10px 45px;
+                padding: 10px 25px;
                 transition: background .2s ease-in 0s;
                 color: $white;
             }
